Added ECG table and API

--- a/local.conf
+++ b/local.conf
@@ -3,9 +3,11 @@
 # Flask webserver settings
 # - bind:   Address to bind to
 # - port:   Port to listen on
+# - debug:  Run the server in debug mode
 [flask]
 bind = 0.0.0.0
 port = 8080
+debug = true
 
 # Database settings
 # - url:    SQLAlchemy URL
