--- a/local.conf
+++ b/local.conf
@@ -1,13 +1,16 @@
 # Example config file for local testing
 
 # Flask webserver settings
-# - bind:   Address to bind to
-# - port:   Port to listen on
-# - debug:  Run the server in debug mode
+# - bind:           Address to bind to
+# - port:           Port to listen on
+# - debug:          Run the server in debug mode
+# - upload_folder:  Path to the folder to store uploaded files in
 [flask]
 bind = 0.0.0.0
 port = 8080
 debug = true
+
+upload_folder = uploads
 
 # Database settings
 # - url:    SQLAlchemy URL
